<resources>
    <string name="app_name">Bright Future</string>
    <string name="himanshu_jha">Himanshu Jha</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyAnUser">Already an user ? Login</string>
    <string name="notYetRegistered">Not Yet Registered ? Sign Up</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="emptyEmail">Email cannot be Empty</string>
    <string name="validEmail">Please Enter Valid Email</string>
    <string name="emptyPass">Password Cannot be Empty</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="signUpSuccessful">SignUp Successful</string>
    <string name="signUpFailed">SignUp Failed</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="loginFailed">Login Failed</string>
    <string name="home">Home</string>
    <string name="X">After 10th</string>
    <string name="XII">After 12th</string>
    <string name="yourDetails">Your Details</string>
    <string name="yourCourse">Your Course</string>
    <string name="yourSubject">Your Subject</string>
    <string name="yourMarks">Your Marks</string>
    <string name="yourName">Enter Your Name</string>
    <string name="yourMobile">Entre Your Mobile no.</string>
    <string name="yourWhatsAppNo">Enter your WhatsApp no.</string>
    <string name="yourHobby">Enter your Interest</string>
    <string name="yourPracticals"> Your Practicals</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="maths">Mathematics</string>
    <string name="gujarati">Gujarati</string>
    <string name="hindi_sans">Hindi/Sanskrit</string>
    <string name="science">Science</string>
    <string name="socialscience">Social Science</string>
    <string name="english">English</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="computer">Computer</string>
    <string name="biology">Biology</string>
    <string name="sanskrit">Sanskrit</string>
    <string name="ba">B.A</string>
    <string name="eco">ECO</string>
    <string name="spcc">SPCC</string>
    <string name="state">State</string>
    <string name="account">Account</string>
    <string name="sociology">Sociology</string>
    <string name="philosophy">Philosophy</string>
    <string name="geography">Geography</string>
    <string name="defaultMarks">00</string>
    <string name="uploadDocuments">Documents</string>
    <string name="MarksheetX">10th Marksheet</string>
    <string name="MarksheetIX">9th Marksheet</string>
    <string name="MarksheetXII">12th Marksheet</string>
    <string name="MarksheetXI">11th Marksheet</string>
    <string name="selectCourse">Select Your Course</string>
    <string name="selectSubject">Select Your Subject</string>
    <string name="yourProfile">Your Profile</string>
    <string name="video">Videos</string>
    <string name="regardingSub">Regarding Subject</string>
    <string name="extraCourse">Extra Course</string>
    <string name="commerece">Commerece</string>
    <string name="appDevelopment">App Development</string>
    <string name="webDevelopment">Web Development</string>
    <string name="design">UI/UX Design</string>
    <string name="machineLearning">Machine Learning</string>
    <string name="dataAnalytics">Data Analytics</string>
    <string name="networkSecurity">Network Security</string>
    <string name="arts">Arts</string>
    <string name="NeverStopLearningBecauseLifeNeverStopTeaching">Never Stop Learning Because Life Never Stop Teaching</string>

    <string-array name="stream_array">
        <item>Select Your Course</item>
        <item>Science</item>
        <item>Commerce</item>
        <item>Arts</item>
    </string-array>

    <string-array name="hobby_array">
        <item>Select Your Interest</item>
        <item>Science</item>
        <item>Commerce</item>
        <item>Arts</item>
    </string-array>

    <string-array name="subject_array">
        <item>Select Your Subject</item>
        <item>Maths</item>
        <item>Biology</item>
        <item>Maths and Biology</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="book">Book Fragment</string>

</resources>