<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/pagebkg"
    tools:context=".auth.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edit_text"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourDetails"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edit_text"
                android:drawablePadding="8dp"
                android:hint="@string/yourName"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/lavender" />

            <EditText
                android:id="@+id/mobileNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:drawablePadding="8dp"
                android:hint="@string/yourMobile"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/lavender" />

            <EditText
                android:id="@+id/whatsAppNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:drawablePadding="8dp"
                android:hint="@string/yourWhatsAppNo"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/lavender" />

<!--            <EditText-->
<!--                android:id="@+id/hobby"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:background="@drawable/custom_edit_text"-->
<!--                android:drawablePadding="8dp"-->
<!--                android:hint="@string/yourHobby"-->
<!--                android:inputType="text"-->
<!--                android:padding="8dp"-->
<!--                android:textColor="@color/black"-->
<!--                android:textColorHint="@color/lavender" />-->

            <Spinner
                android:id="@+id/hobbySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:entries="@array/hobby_array"
                android:background="@drawable/custom_edit_text"
                android:drawablePadding="8dp"
                android:hint="@string/yourHobby"
                android:padding="8dp"
                android:backgroundTint="@color/lavender"
                android:spinnerMode="dropdown" />

                        <!-- New Horizontal LinearLayout for buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/reset"
                    android:textSize="16sp"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/next"
                    android:textSize="16sp"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
