<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoFragment"
    android:background="@color/lavender">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edit_text"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arts"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!-- TableLayout for subjects -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_marginTop="16dp">

                <!-- Mathematics -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/sociology"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>

                <!-- Science -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/phy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/ba"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>

                <!-- English -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/che"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/philosophy"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/maths"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/geography"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>


                <!-- Social Science -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/computer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/gujarati"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/english"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/english"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/sanskrit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:backgroundTint="@color/lavender"
                        android:padding="12dp"
                        android:text="@string/sanskrit"
                        android:drawablePadding="8dp"
                        app:cornerRadius="20dp" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>